--- a/.github/workflows/My First Workflow.yml
+++ b/.github/workflows/My First Workflow.yml
@@ -20,17 +20,21 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    # This job checks out the repository, builds a Docker image from your Dockerfile,
+    # tags it as hello-world-nginx:v1, and runs a container mapping port 8081 on the host
+    # to port 80 in the container. It then lists running containers to verify the container is up.
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: Build Docker image
+        run: docker build -t hello-world-nginx:v1 .
+
+      - name: Run Docker container
+        run: docker run -d -p 8081:80 --name hello-nginx hello-world-nginx:v1
+
+      - name: Check running containers
+        run: docker ps
