--- a/.github/workflows/test-k8s-access.yml
+++ b/.github/workflows/test-k8s-access.yml
@@ -1,4 +1,3 @@
-# filepath: c:\VSCode\Kubernetes-github-action\.github\workflows\Kubernetes Access Test.yml
 name: Kubernetes Access Test
 
 on:
@@ -18,6 +17,10 @@ jobs:
           chmod +x ./kubectl
           sudo mv ./kubectl /usr/local/bin/kubectl
 
+      - name: Set up Helm
+        run: |
+          curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
+
       - name: Configure Kubernetes context
         run: |
           kubectl config set-cluster my-cluster --server=https://<your-kubernetes-api-server> --insecure-skip-tls-verify=true
@@ -25,24 +28,19 @@ jobs:
           kubectl config set-context my-context --cluster=my-cluster --user=my-user
           kubectl config use-context my-context
 
-      - name: Generate random pod name
+      - name: Generate random release name
         id: rand
-        run: echo "POD_NAME=test-pod-$(openssl rand -hex 4)" >> $GITHUB_ENV
+        run: echo "RELEASE_NAME=demo-$(openssl rand -hex 4)" >> $GITHUB_ENV
 
-      - name: Apply Kubernetes object with random name
+      - name: Install nginx via Helm with overridden values
         run: |
-          echo "
-          apiVersion: v1
-          kind: Pod
-          metadata:
-            name: ${POD_NAME}
-            namespace: <your-namespace>
-          spec:
-            containers:
-            - name: nginx
-              image: nginx:alpine
-          " | kubectl apply -f -
+          helm repo add bitnami https://charts.bitnami.com/bitnami
+          helm repo update
+          helm upgrade --install ${RELEASE_NAME} bitnami/nginx \
+            --namespace <your-namespace> \
+            --create-namespace \
+            --set image.tag=alpine
 
-      - name: Check for pods in namespace
+      - name: Check for Helm releases in namespace
         run: |
-          kubectl get pods -n <your-namespace>
+          helm list -n <your-namespace>
